--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,3 +1,20 @@
 body{
   font-family: 'Poppins', sans-serif !important;
 }
+#slides_control > div{
+  height: 200px;
+}
+img{
+  margin:auto;
+  width: 1000px;
+  height: 1000px;
+}
+#slides_control {
+  position:absolute;
+  width: 400px;
+  left:50%;
+  margin-left:-200px;
+}
+.carousel .carousel-control { 
+	visibility: hidden; 
+}
