css color scheme

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,3 +1,9 @@
+/*Color Scheme:
+Coral: #CF403A
+Tan: #cf8b3a
+Blue-green: #1d62ab
+Dark blue: #346676*/
+
 body{
   font-family: 'Poppins', sans-serif !important;
 }
