--- a/client/partials/about.html
+++ b/client/partials/about.html
@@ -1,7 +1,8 @@
 <p style="background-color: #CF403A; width: 400px; font-size: 32px;">HĀTE</p>
 <p style="background-color: #cf8b3a; width: 400px; font-size: 32px;">HĀTE</p>
 <p style="background-color: #346676; width: 400px; font-size: 32px;">HĀTE</p>
-<p style="background-color: #266298; width: 400px; font-size: 32px;">HĀTE</p>
+<p style="background-color: #1d62ab; width: 400px; font-size: 32px;">HĀTE</p>
+
 <div id="aboutdiv">
 	<div class="col-sm-3">
 		<h3>About HĀTE</h3>
