--- a/client/partials/first.html
+++ b/client/partials/first.html
@@ -1,4 +1,4 @@
-<div ng-controller="CarouselController" id="slides_control">
+<!-- <div ng-controller="CarouselController" id="slides_control">
 	<div class="">
 	  <uib-carousel interval="myInterval">
 	    <uib-slide ng-repeat="slide in slides" active="slide.active">
@@ -10,3 +10,4 @@
 	  </uib-carousel>
 	</div>
 </div>
+ -->
