--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -7,7 +7,8 @@
   position: relative;
   height: 60vh;
   z-index: -2;
-  background: url("https://unsplash.it/2000/800?image=563") center top/cover no-repeat;
+  width: 100%;
+ /* background: url("https://unsplash.it/2000/800?image=563") center top/cover no-repeat;*/
 }
 .overlay {
   position: absolute;
