--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -10,15 +10,28 @@ body{
 a{
   background: none;
 }
-#slides_control > div{
+/*#slides_control > div{
   	height: 200px;
+}*/
+#carousel{
+	width: 100%;
+	height: 100%;
 }
-.hero > img{
-	position: relative;
-  	margin:auto;
-  	width: 100%;
-  	height: 60%;
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
 }
+.slide{
+	width: 100%;
+	height: 100%;
+}
+.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    width: 100% ;
+    height: 100% !important;
+}
+
 #slides_control {
   	position:absolute;
   	width: 400px;
