--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -97,6 +97,11 @@
   color: #fff;
 }
 
+/* Dropdown */
+.btn-group:hover>.dropdown-menu {
+  display: block;
+}
+
 
 /* Underline From Center */
 .hvr-underline-from-center {
@@ -118,7 +123,7 @@
   left: 50%;
   right: 50%;
   bottom: 0;
-  background: #2098d1;
+  background: #1d62ab;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
