--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -10,11 +10,7 @@ body{
 #slides_control > div{
   height: 200px;
 }
-img{
-  margin:auto;
-  width: 1000px;
-  height: 1000px;
-}
+
 #slides_control {
   position:absolute;
   width: 400px;
@@ -24,3 +20,25 @@ img{
 .carousel .carousel-control {
 	visibility: hidden;
 }
+.wrapper { width: 100%; }
+.centered-wrapper { max-width: 1260px; width: 100%; margin: 0 auto; }
+.item-wrap,
+.general-desc-wrap { width: 100%; text-align:center; margin : 25px 0; }
+.general-desc-wrap { padding : 0 85px; }
+.allitems .item { position: relative; border: 1px solid #ccc; width: 342px; min-height: 397px; border-radius: 5px; padding: 25px; display:inline-block; margin-right: 10px; margin-bottom : 10px; vertical-align: top; }
+.allitems .item h2 { margin: 0px 0 15px 0; padding: 0px; font-size: 24px; font-weight: 500; text-align: center; }
+.allitems .item h3 { font-size: 24px; font-weight: 500;}
+.allitems .item p { font-weight: 300; margin-top: 150px; text-align: center;}
+.allitems .item img.thumb { height: 140px; cursor: pointer; background: #fff; left : 50%; margin-left: -55px; top: 60px; }
+.allitems .item img.full { height: 397px; background: #f9f9f9; border-radius: 5px; cursor: pointer; z-index: 2; left: 0; margin-left : 0; top: 0; }
+.allitems .item img.thumb,
+.allitems .item img.full { -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s; -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s; -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s; transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s; position: absolute;  }
+.close-icon { position: absolute; right: 15px; top: 15px; display:none; width: 24px; height: 24px; background: url(https://cdn4.iconfinder.com/data/icons/e-commerce-icon-set/48/Remove-32.png) left top no-repeat; background-size: 100%; z-index: 4; cursor: pointer; }
+.button { background-color: #1d62ab; color: #fff; border: 0px; padding: 7px 15px; font-weight : 400; font-size : 16px; outline: none; }
+.sold-out { cursor: default;  background-color:#eee; color: #aaa; }
+.nav.nav-pills { text-align:center; margin-top : 20px; }
+.nav.nav-pills li { float: none; display: inline-block; }
+.item .panel { position:absolute; left: 0; top: 0; width: 100%; height: 372px; border-radius : 5px 5px 0px 0px; padding: 25px; box-sizing: border-box; overflow: auto; z-index : 3; }
+.item .panel h2 { text-transform : uppercase; font-size : 22px; }
+.item .panel p { margin-top: 15px; }
+.item .panel .close-icon { right: 24px; top: 24px; }
