--- a/client/partials/men.html
+++ b/client/partials/men.html
@@ -1,45 +1,19 @@
-<head>
-	<title>Hāte Apparel</title>
-	<!-- FONT -->
-	<link href='https://fonts.googleapis.com/css?family=Poppins:400,500,300,700' rel='stylesheet' type='text/css'>
-	<script src="https://use.fontawesome.com/017a202a6f.js"></script>
-	<!-- require angular -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
-	<!-- bootstrap -->
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.js'>
-	</script>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="./css/styles.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- CONTROLLERS / FACTORIES -->
-  <script type="text/javascript" src="./factories/item_factory.js"></script>
-  <script type="text/javascript" src="./controllers/dashboard_controller.js"></script>
-</head>
-<div ng-app="store">
-<div id="mendiv" ng-controller="StoreController as store">
-	<h2>Men's Products</h2>
-	<div class="allitems row">
-<!-- 		<div class="item col-sm-3 thumbnail" ng-repeat="product in store.menproducts">
-			<img ng-src="/"> -->
-			<div class="item col-md-3 thumbnail">
-				<img src="./images/menshirt.jpg">
-				<h5>Printed Cotton T-Shirt</h5>
-				<p>$25</p>
-			</div>
-			<div class="item col-md-3 thumbnail">
-				<img src="./images/menshirt.jpg">
-				<h5>Printed Cotton T-Shirt</h5>
-				<p>$25</p>
-			</div>
-			<div class="item col-md-3 thumbnail">
-				<img src="./images/menshirt.jpg">
-				<h5>Printed Cotton T-Shirt</h5>
-				<p>$25</p>
-			</div>
+<div ng-controller="storeController">
+<div id="mendiv">
+	<div class="wrapper">
+		<div class="centered-wrapper">
+			<h2>Men's Products</h2>
+			<div class="allitems">
+            	<div class="item" ng-repeat="product in menproducts">
+            		<h2>{{product.name}}</h2>
+               		<img ng-src="{{product.image}}" ng-class="class" ng-click="changeClass(this)">
+                	<p>{{product.description}}</p>
+                	<h3>${{product.price}}</h3>
+               		<button class="button sold-out" disabled ng-show="product.soldOut">Sold Out</button>
+                	<button class="button" ng-show="product.canPurchase">Add to Cart</button>
+                </div>
+            </div>	
+        </div>
 	</div>
 </div>
 </div>
